// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Text prop "onPress" 1`] = `
<div
  className="css-text-76zvg2 rn-cursor-1loqt21"
  data-focusable={true}
  dir="auto"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
/>
`;

exports[`components/Text prop "selectable" 1`] = `
<div
  className="css-text-76zvg2"
  dir="auto"
/>
`;

exports[`components/Text prop "selectable" 2`] = `
<div
  className="css-text-76zvg2 rn-userSelect-lrvibr"
  dir="auto"
/>
`;
